# object_detection_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: DetectorState.msg  DetectorsState.msg
srv/: ManageDetector.srv  SetFrequency.srv
