<?xml version="1.0"?>
<package>
  <name>object_detection_msgs</name>
  <version>1.0.0</version>
  <description>The object_detection_msgs package. Common messages and services used by object detection component.</description>

  <maintainer email="cllamas@robotnik.es">Carlos Llamas</maintainer>


  <license>BSD</license>

  <author email="cllamas@robotnik.es">Carlos Llamas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
